# lang-chain-guide

./: README.md  pyproject.toml
docs/: 01_hello_world.md  02_tools_and_action.md  03_dynamic_behavior.md  03_memory_and_context.md  04_memory_and_context.md  04_rag_pipeline.md  05_middleware_control.md  05_rag_pipeline.md  06_capstone_project.md  06_middleware_control.md  07_capstone_project.md
docs/LCEL/: lcel_final.md  lcel_pipeline.md
scripts/: 01.a_simple_model.py  01.b_agent_streaming.py  02.a_agent_with_tools.py  02.b_advanced_tool_schema.py  02.c_structured_output.py  03.a_dynamic_prompt_selection.py  03.b_dynamic_model_selection.py  03.b_memory_with_checkpointing.py  03.c_conditional_tools.py  03.d_agent_routing.py  04.a_agent_with_history.py  04.b_memory_with_checkpointing.py  04.c_context_passing.py  04.d_agent_with_state.py  04_rag_pipeline.py  05.a_logging_middleware.py  05.d_summarization_middleware.py  05_rag_pipeline.py  06.a_logging_middleware.py  06.b_rate_limiting_middleware.py  06.c_human_approval_middleware.py  06.d_summarization_middleware.py  07_complete_application.py  advanced_tool_schema.py  agent_streaming.py  agent_with_history.py  agent_with_state.py  agent_with_tools.py  complete_application.py  context_passing.py  custom_middleware.py  decorator_middleware.py  dynamic_model_selection.py  dynamic_prompt_selection.py  human_in_the_loop_middleware.py  memory_with_checkpointing.py  rag_pipeline.py  rate_limiting_middleware.py  simple_model.py  structured_output.py  (+1 more)
scripts/LCEL/: 01.a_simple_lcel_chain.py  01.b_runnable_map.py  (+6 more)
(+3 files in other folders)
